[gd_scene load_steps=31 format=2]

[ext_resource path="res://inimigos/inimigos_comun/fase_2/cavaleiro_espada/side_scroller/script_C_E/cavaleiro_espada(s_d).gd" type="Script" id=1]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/damage_animation/damage.png" type="Texture" id=2]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/attack_animation/attack1.png" type="Texture" id=3]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/attack_animation/attack2.png" type="Texture" id=4]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/attack_animation/attack3.png" type="Texture" id=5]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/attack_animation/attack4.png" type="Texture" id=6]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/attack_animation/attack5.png" type="Texture" id=7]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/death_animation/death1.png" type="Texture" id=8]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/death_animation/death2.png" type="Texture" id=9]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/death_animation/death3.png" type="Texture" id=10]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/death_animation/death4.png" type="Texture" id=11]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/idle_animation/idle1.png" type="Texture" id=12]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/idle_animation/idle2.png" type="Texture" id=13]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/walk_animation/walk1.png" type="Texture" id=14]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/walk_animation/walk2.png" type="Texture" id=15]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/walk_animation/walk3.png" type="Texture" id=16]
[ext_resource path="res://inimigos/inimigos_comun/fase_1/homem_das_cavernas/side_scroller/walk_animation/walk4.png" type="Texture" id=17]

[sub_resource type="CapsuleShape2D" id=1]
height = 101.554

[sub_resource type="Animation" id=2]
resource_name = "atack_left_animation"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_H_C:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animation_H_C:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite_H_C:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("area_arma_inimigo/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 57.596, -26.6133 ), Vector2( 71.4616, -53.9367 ), Vector2( 57.7999, -4.7953 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "atack_rigth_animation"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_H_C:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animation_H_C:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite_H_C:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("area_arma_inimigo/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 121.623, -26.0016 ), Vector2( 106.33, -53.7328 ), Vector2( 119.991, -4.38748 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "damage_animation"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_H_C:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area_arma_inimigo/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 88.6932, -7.85389 ) ]
}

[sub_resource type="Animation" id=5]
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_H_C:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animation_H_C:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("area_arma_inimigo/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 87.4637, -9.69803 ), Vector2( 86.849, 15.8125 ), Vector2( 88.6932, 39.479 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_H_C:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animation_H_C:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1.0, 0.3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("area_arma_inimigo/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 89.3079, -9.08333 ) ]
}

[sub_resource type="Animation" id=7]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_H_C:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.00390165, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animation_H_C:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2.3, 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("area_arma_inimigo/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 88.6932, -2.9362 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 197.177, 28 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 241.174, 28 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 14.841, 48.777 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 15.841, 48.777 )

[sub_resource type="CapsuleShape2D" id=12]
radius = 19.841
height = 77.554

[sub_resource type="CircleShape2D" id=13]
radius = 18.8423

[node name="cavaleiro_espada(s_d)" type="KinematicBody2D" groups=[
"enemie",
]]
script = ExtResource( 1 )

[node name="sprite_H_C" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"enemie",
]]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="animation_H_C" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/atack_left_animation = SubResource( 2 )
anims/atack_rigth_animation = SubResource( 3 )
anims/damage_animation = SubResource( 4 )
anims/death_animation = SubResource( 5 )
anims/idlle_animation = SubResource( 6 )
anims/walk_animaton = SubResource( 7 )

[node name="area_lado_esquerdo_move" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -345, -1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_lado_esquerdo_move"]
shape = SubResource( 8 )

[node name="area_lado_direito_move" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 11.0418, 1.76656 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_lado_direito_move"]
position = Vector2( 371, -2 )
shape = SubResource( 9 )

[node name="area_esquerda_ataque" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 31, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_esquerda_ataque"]
position = Vector2( -69, -5 )
shape = SubResource( 10 )

[node name="area_direita_ataque" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( -40, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_direita_ataque"]
position = Vector2( 77, -4 )
shape = SubResource( 11 )

[node name="area_corpo_H_C" type="Area2D" parent="." groups=[
"enemie",
]]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_corpo_H_C" groups=[
"enemie",
]]
position = Vector2( -1, 5 )
shape = SubResource( 12 )

[node name="delay_atack" type="Timer" parent="."]
wait_time = 0.5

[node name="area_arma_inimigo" type="Area2D" parent="." groups=[
"weapom_enemie",
]]
editor/display_folded = true
position = Vector2( -89, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_arma_inimigo" groups=[
"weapom_enemie",
]]
modulate = Color( 0.168627, 0.937255, 0.2, 1 )
position = Vector2( 88.6932, -7.85389 )
shape = SubResource( 13 )
[connection signal="animation_finished" from="animation_H_C" to="." method="_on_animation_H_C_animation_finished"]
[connection signal="body_entered" from="area_lado_esquerdo_move" to="." method="_on_area_lado_esquerdo_move_body_entered"]
[connection signal="body_entered" from="area_lado_direito_move" to="." method="_on_area_lado_direito_move_body_entered"]
[connection signal="body_entered" from="area_esquerda_ataque" to="." method="_on_area_esquerda_ataque_body_entered"]
[connection signal="body_exited" from="area_esquerda_ataque" to="." method="_on_area_esquerda_ataque_body_exited"]
[connection signal="body_entered" from="area_direita_ataque" to="." method="_on_area_direita_ataque_body_entered"]
[connection signal="body_exited" from="area_direita_ataque" to="." method="_on_area_direita_ataque_body_exited"]
[connection signal="area_entered" from="area_corpo_H_C" to="." method="_on_area_corpo_H_C_area_entered"]
[connection signal="timeout" from="delay_atack" to="." method="_on_delay_atack_timeout"]
[connection signal="timeout" from="delay_atack" to="." method="_on_delay_atack__timeout"]
[connection signal="body_entered" from="area_arma_inimigo" to="." method="_on_area_arma_inimigo_body_entered"]
